# Experiments

./: .codexignore  .gdlintrc  .gitignore  CHANGE_LOG.md  FISHYX3_BUILD_PLAN.md  FishyX3.sln  LICENSE.txt  README.md  RollHISTORY_plan  STYLE_Guide.md  TODO.md  VidCam.md  main.tscn  project.godot  res.md
.codex/: AGENTS.md  FISHBOID.md  FLEET.md  Project.md  fix_indent.sh  setup.sh
BOIDFIsh/: BOIDS.md  CHANGE_LOG.md  FISHBOID.md  PLAN.md  README.md  STYLE_GUIDE.md  TODO.md  VARIABLE_NAMING.md
BOIDFIsh/fishyfishyfishy/: Main.tscn  SOFTBODYFISHPLAN.md  SoftFishBody.tscn  project.godot  (+3 more)
Experiments/: FishyX3.sln
FISHYX3/: CHANGE_LOG.md  TODO.md  VARIABLE_NAMING.md
LIVEdie/: AGENTS.md  LIVEdie_DesignDoc.md  LIVEdie_PLAN.md  README.md  ScriptCompilation.txt  TODO.md  TTRPG_DICE_Notation.md  fix_indent.sh  icon.svg.import  main.tscn  project.godot  readme.doc  readme.md
VidCam/: Cargo.toml  VidCam.md
VidCam/.github/workflows/: ci.yml
VidCam/src/: capture.rs  config.rs  frame.rs  lib.rs  main.rs  overlay.rs  rtsp.rs  timelapse.rs
VidCam/tests/: capture_tests.rs  config_tests.rs  overlay_tests.rs  rtsp_tests.rs  timelapse_tests.rs
data/: fish_schema.json
fishtank/: .gitignore  AGENTS.md  BOIDS.md  CHANGELOG.md  CODEX_IGNORE_ScriptCompilation.txt  FishTank.csproj  FishTank.sln  PLAN.md  README.md  STYLE_GUIDE.md  TODO.md  ZZZCODEX_IGNORE_ScriptCompilation.txt  project.godot
scenes/: FishBody.tscn
scripts/: fish_flock.gd  fish_flock.gd.uid
shaders/: fish_lighting.gdshader  fish_lighting.gdshader.uid
sprites/: placeholder.png.import
tests/: run_tests.gd
(+239 files in other folders)
