[package]
name = "vidcam"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
eframe = { version = "0.32", default-features = false, features = ["glow", "wayland", "x11"] }
thiserror = "1"
dirs = "5"
winit = "0.30"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "process", "io-util"] }
